--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "faiss-cpu>=1.11.0.post1",
     "fastapi>=0.116.1",
+    "pypdf>=5.8.0",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
+    "uvicorn>=0.35.0",
 ]
