--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "faiss-cpu>=1.11.0.post1",
     "fastapi>=0.116.1",
+    "google-generativeai>=0.8.5",
+    "langchain>=0.3.27",
+    "pinecone>=7.3.0",
+    "pymupdf>=1.26.3",
     "pypdf>=5.8.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
